# SIP-Pi

./: CMakeLists.txt  Makefile  PhoneWave.c  README.md  cp_mk.sh  mail.py  mail.sh  numbers.txt  numcheck.py  pi-out.c  sipcall  sipcall-sample.sh  sipcall.c  sipserv  sipserv-ctrl.sh  sipserv-sample.cfg  sipserv-structs.h  sipserv.c  sipserv.cfg  sipserv2.c  tcpsocket.c
